--- a/chrome/views/popup.jade
+++ b/chrome/views/popup.jade
@@ -3,9 +3,9 @@ doctype html
 html
   head
     meta(charset='UTF-8')
-    title Redux TodoMVC Example
+    title ShipHawk HawkVision
     style.
-      body { width: 500px; }
+      body { width: 800px; }
   
   body
     #root(class='todoapp')
