--- a/chrome/views/window.jade
+++ b/chrome/views/window.jade
@@ -3,7 +3,7 @@ doctype html
 html
   head
     meta(charset='UTF-8')
-    title Redux TodoMVC Example
+    title ShipHawk HawkVision
   
   body
     #root(class='todoapp')
